# axum-todo

./: .gitignore  Cargo.toml  Makefile  package-lock.json  package.json
axum-todo-front/: index.html  package-lock.json  package.json
axum-todo-front/src/: App.tsx
axum-todo-front/src/components/: SideNavi.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
axum-todo-front/src/lib/api/: label.ts  todo.ts
axum-todo-front/src/styles/: modal.ts
axum-todo-front/src/types/: todo.d.ts
migrations/: 20230114155737_init.sql  20230115141819_label.sql
src/: handlers.rs  main.rs  repositories.rs
src/handlers/: label.rs  todo.rs
src/repositories/: label.rs  todo.rs
