[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error caused using axum="0.6^"
axum = "0.5.17"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
tower = "0.4.11"
mime = "0.3.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tracing = "0.1.30"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
http-body = "0.4.3"
validator = { version = "0.16.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenv = "0.15.0"
tower-http = { version="0.3.5", features=["cors"]}

[features]
default = ["database-test"]
database-test = []